--- a/src/main/resources/static/Ejemplo8.html
+++ b/src/main/resources/static/Ejemplo8.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 
 <html>
-   <head>
-         <title>Ejemplo9</title>
+    <head>
+        <title>Ejemplo9</title>
         <meta charset="UTF-8">
     </head>
     <body>
-        <div>TODO write content</div>
+        <a href="Ejemplo7.html">Back</a>
+        <a href="index.html">HOME</a>
+        <a href="Ejemplo9.html">Next</a>
+
+
+        <h1>Ejemplos de imagenes</h1>
+
+
+        <img src="images/Tigre.jpg" alt="Imagen de un tigre" width="100"/>
+        <img src="images/Marmot-edit1.jpg" alt="Imagen de una marmota"/>
     </body>
 </html>
